--- a/src/styles/Chores/choretemplate.module.scss
+++ b/src/styles/Chores/choretemplate.module.scss
@@ -71,7 +71,84 @@
     }
   }
 }
-@media only screen and (max-width: 790px) {
+
+@media only screen and (min-width: 900px) and (max-height: 900px) {
+  .choreTemplate {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    padding: 10px;
+    height: fit-content;
+    border-radius: 10px;
+    margin-top: 20px;
+    .userimg {
+      width: 64px;
+      height: 64px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-right: 15px;
+    }
+    .nameandpoints {
+      flex: 2;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      justify-content: center;
+      height: 100%;
+      .name {
+        font-size: 14px;
+        text-transform: capitalize;
+        font-weight: 500;
+        margin-bottom: 5px;
+      }
+      .points {
+        font-size: 14px;
+        font-weight: 400;
+        color: rgba(130, 130, 130, 1);
+      }
+      .msg {
+        flex: 1;
+        max-width: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        cursor: pointer;
+        &:hover {
+          svg {
+            transition: all 0.3s ease;
+            circle {
+              fill: rgb(41, 41, 41);
+            }
+          }
+        }
+      }
+    }
+    .assignbutton {
+      background-color: #4166eb;
+      color: white;
+      width: 80px;
+      height: 34px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 500;
+      font-size: 12px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all 0.3s ease;
+      &:hover {
+        background-color: #ffffff;
+        color: #4166eb;
+        border: 1px solid #4166eb;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 860px) {
   .choreTemplate {
     padding: 0px 5px;
     height: 60px;
