--- a/src/styles/EditProfile/editprofile.module.scss
+++ b/src/styles/EditProfile/editprofile.module.scss
@@ -18,6 +18,7 @@
       display: flex;
       .imagesection {
         border-radius: 100%;
+        height: fit-content;
         width: fit-content;
         .imagesetter {
           position: absolute;
@@ -319,15 +320,25 @@
         display: flex;
         flex-direction: column;
         .imagesection {
-          width: fit-content;
-          display: flex;
-          justify-content: center;
-          width: 100%;
-          margin-bottom: 20px;
-          padding-left: 0px;
+          border-radius: 100%;
+          margin: 0 auto 20px;
+          .imagesetter {
+            position: absolute;
+            width: 128px;
+            height: 128px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 100%;
+            font-size: 12px;
+            cursor: pointer;
+            background-color: rgba(26, 26, 26, 0.527);
+            color: white;
+          }
           img {
             width: 128px;
             height: 128px;
+            border-radius: 100%;
             object-fit: cover;
           }
         }
