--- a/src/styles/GeneralComponents/avatarselector.module.scss
+++ b/src/styles/GeneralComponents/avatarselector.module.scss
@@ -34,6 +34,7 @@
       width: 100%;
       display: flex;
       flex-wrap: wrap;
+      align-content: flex-start;
       margin-top: 20px;
       gap: 20px;
       overflow-y: auto;
@@ -43,6 +44,7 @@
         height: 120px;
         cursor: pointer;
         border-radius: 100%;
+        overflow: hidden;
         position: relative;
         .selected {
           position: absolute;
@@ -60,6 +62,61 @@
         }
         &:hover {
           border: 2px solid rgb(0, 0, 0);
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 860px) {
+  .avatarselector {
+    .main {
+      width: 90vw;
+      height: 70vh;
+      background-color: white;
+      z-index: 5;
+      border-radius: 12px;
+      padding: 20px 30px;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      .heading {
+        font-size: 22px;
+        font-weight: 500;
+      }
+      .wrapper {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        margin-top: 20px;
+        gap: 20px;
+        overflow-y: auto;
+        flex: 1;
+        .avatar {
+          width: 100px;
+          height: 100px;
+          cursor: pointer;
+          border-radius: 100%;
+          overflow: hidden;
+          position: relative;
+          .selected {
+            position: absolute;
+            width: 100%;
+            display: flex;
+            border-radius: 100%;
+            justify-content: center;
+            height: 100%;
+            align-items: center;
+            background-color: rgba(0, 162, 255, 0.479);
+          }
+          img {
+            width: 100%;
+            height: 100%;
+          }
+          &:hover {
+            border: 2px solid rgb(0, 0, 0);
+          }
         }
       }
     }
